fixed scrollbar issue with modal

--- a/src/css/components/main.css
+++ b/src/css/components/main.css
@@ -4,6 +4,7 @@ body {
   font-family: "Quicksand", sans-serif;
   width: 100%;
   overflow-x: hidden;
+  overflow-y: auto; 
 }
 
 h1 {
@@ -27,5 +28,6 @@ a {
 }
 
 .no-scroll {
-  overflow-y: hidden; 
+  position: fixed;
+  overflow-y: scroll; 
 }
